--- a/main.css
+++ b/main.css
@@ -204,7 +204,7 @@ footer {
 }
 
 @media (max-width: 720px) {
-    body, header, section, footer {
+    header, section, footer {
         padding-right: 20px;
         padding-left: 20px;
     }
